--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -759,10 +759,12 @@ textarea {
 
 .product-info h1 {
   margin: 0;
-  font-size: 1.7rem;
-  letter-spacing: 0.07em;
-  text-transform: uppercase;
+  font-size: 1rem;
   font-weight: 500;
+  letter-spacing: 0.08em;
+  margin: 0.5em 0 0.7em 0;
+  text-transform: uppercase;
+}
   line-height: 1.2;
 }
 
